@startuml
'https://plantuml.com/class-diagram

class App42 {
    *createPeople( BufferedReader )
    *loadFileData( LinkedList<String> )
}

class Person {
    First name
    Last name
    Salary

    +Person( String , String , int )
    +Person( String )
    +toString()

    +getFirstName()
    +getLastName()
    +getSalary()
    +setFirstName(String)
    +setLastName(String)
    +setSalary(int)

    *parsePerson()
    *formatFirstName()
    *formatLastName()

    +getTable()
}

class FileHandling {
    +getInputStream(String)
    *getProjectDirectory()
}

object File {
    people data
}

App42 o---> Person
App42 --> FileHandling
FileHandling o--> File
App42 o--> File
@enduml